--- a/src/style.css
+++ b/src/style.css
@@ -1,42 +1,3 @@
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content option {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown option:hover {background-color: #fff;}
-  
-  .show {display: block;}
-
 
 /* Imagen de Fondo Verde */
 
@@ -56,3 +17,7 @@ html  {
       position: fixed; /* Hacemos que tenga una posición fija */
       
   }
+
+#contentOfCards {
+  border: 1px solid black;
+}
