--- a/src/style.css
+++ b/src/style.css
@@ -1,23 +1,32 @@
 
 /* Imagen de Fondo Verde */
+body {
+  margin: 0px;
+}
 
 html  {
   background-image: url("img/Fondo_verde.png");
-  background-size: cover;
+/*  background-size: cover; */
 }
 
 
 /* Box blanco */
 #root {
   background:  whitesmoke;
-      height: 100%;
+      height: 100%; 
       right: 2%; /* borde derecho */
       left: 2%; /* borde izquierdo */
       top: 0; /* La Posicionamos arriba */
-      position: fixed; /* Hacemos que tenga una posición fija */
-      
   }
 
 #contentOfCards {
   border: 1px solid black;
+}
+
+.card-style {
+  border: 1px solid red;
+  display: inline-block;
+  margin: 5px 5px 5px 5px;
+  padding: 5px 5px 5px 5px;
+  justify-content: center;
 }
