Cambios en vista de las tarjetas

--- a/src/style.css
+++ b/src/style.css
@@ -21,12 +21,20 @@ html  {
 
 #contentOfCards {
   border: 1px solid black;
+  justify-items: center;
 }
 
 .card-style {
-  border: 1px solid red;
   display: inline-block;
-  margin: 5px 5px 5px 5px;
-  padding: 5px 5px 5px 5px;
-  justify-content: center;
+  background-color: #ebebeb;
+  height: 226px;
+  width: 150px;
+  margin: 20px 15px 20px 15px;
+  padding: 15px 15px 15px 15px;
+  justify-items: center;
+  text-align: center;
+  border-radius: 20px;
+  font-family: "Candara", Helvetica;
+  color: #414141;
+  box-shadow: 0 4px 8px 0 rgba(27, 27, 27, 0.2), 0 6px 20px 0 rgba(27, 27, 27, 0.19);
 }
