--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,6 @@ html  {
       right: 2%; /* borde derecho */
       left: 2%; /* borde izquierdo */
       top: 0; /* La Posicionamos arriba */
-      position: fixed; /* Hacemos que tenga una posición fija */   
   }
 
 #contentOfCards {
@@ -28,14 +27,56 @@ html  {
 .card-style {
   display: inline-block;
   background-color: #ebebeb;
-  height: 226px;
-  width: 150px;
+  height: 16em;
+  width: 10em;
   margin: 20px 15px 20px 15px;
   padding: 15px 15px 15px 15px;
   justify-items: center;
   text-align: center;
   border-radius: 20px;
-  font-family: "Candara", Helvetica;
+  font-family: "Ramabhadra", Helvetica;
   color: #414141;
   box-shadow: 0 4px 8px 0 rgba(27, 27, 27, 0.2), 0 6px 20px 0 rgba(27, 27, 27, 0.19);
+}
+
+.modal-caller {
+  color: rgb(18, 175, 18);
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
