--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
+#banner {
+  background-attachment: scroll,							fixed;
+  background-color: #666;
+  background-image: url("img/overlay.png"), url("img/hero-japan.jpg");
+  background-position: top left,						center center;
+  background-repeat: repeat,							no-repeat;
+  background-size: auto,							cover;
+  padding: 9em 0 10em 0;
+}
 
 /* Imagen de Fondo Verde */
 body, h1 , h2 , h3 , p , br  {
@@ -9,9 +18,13 @@ body, h1 , h2 , h3 , p , br  {
 
 /* Box blanco */
 #root {
- 
       text-align: center; 
       font-family: "Source Sans Pro", sans-serif;
+  }
+
+  .datalover {
+    font-family: "Source Sans Pro", sans-serif;
+    text-align: left; 
   }
 
 #contentOfCards {
@@ -95,8 +108,7 @@ body, h1 , h2 , h3 , p , br  {
   cursor: pointer;
 }
 
-.selectArea #select1 {
-    
+.selectArea #select1 { 
   background: linear-gradient(284.34deg, #25CDAA 3.72%, rgba(255, 255, 255, 0) 108.48%), #A2D694;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 12px;
@@ -113,48 +125,24 @@ footer {
   background: #f0f0f0;
   padding: 4em 0 6em 0;
   text-align: center;
+  list-style: none;
   font-family: "Source Sans Pro", sans-serif;
 }
-
-#footer .copyright {
-  color: #999;
-  font-size: 0.9em;
-  line-height: 1em;
-  margin: 2em 0 0 0;
-  padding: 0;
+.footerText1 {
+  font-size: 1em;
+  line-height: 12px;
   text-align: center;
 }
 
-  #footer .copyright a {
-    color: inherit;
+.footerText2 {
+  font-size: 1.3em;
+  text-align: center;
+}
+
+ .font-size {
+    text-decoration: none;
+		border-bottom: none;
+    position: relative;
   }
 
-  #footer .copyright li {
-    display: inline-block;
-    list-style: none;
-    width: 400px;
-    text-align: justify;
-  }
-
-  #footer .icons a {
-    -moz-transition: opacity 0.2s ease-in-out;
-    -webkit-transition: opacity 0.2s ease-in-out;
-    -ms-transition: opacity 0.2s ease-in-out;
-    transition: opacity 0.2s ease-in-out;
-    opacity: 0.35;
-  }
-
-    #footer .icons a:hover {
-      opacity: 0.75;
-    }
-
-
-  #banner {
-      background-attachment: scroll,							fixed;
-      background-color: #666;
-      background-image: url("img/overlay.png"), url("img/hero-japan.jpg");
-      background-position: top left,						center center;
-      background-repeat: repeat,							no-repeat;
-      background-size: auto,							cover;
-      padding: 9em 0 10em 0;
-  }
+  
