--- a/src/style.css
+++ b/src/style.css
@@ -24,14 +24,14 @@ body {
   padding: 1em 1em 12em 1em;
 }
 
-.searchClass {
-    width:170px;
-    margin:5px;
-    padding:10px 16px;
-    border-radius:20px;
-    outline:none;
-    border:2px linear-gradient(284.34deg, #25CDAA 3.72%, rgba(255, 255, 255, 0) 108.48%), #A2D694;;
-    background: white;
+.searchClass {   
+  margin: 20px;
+  padding: 1% 2% 1% 2%;
+  border-radius:10px;
+  border:2px linear(284.34deg, #25CDAA 3.72%, rgba(255, 255, 255, 0) 108.48%), #A2D694;;
+  background: white;
+  font-size: 16px;
+  font-family: 'Raleway', sans-serif;
    
 }
 
@@ -44,7 +44,6 @@ body {
   font-family: 'Raleway', sans-serif;
   color: #f0f0f0;
   text-align: center;
-
   padding: 1% 2% 1% 2%;
   border: none;
   margin: 20px;
@@ -52,6 +51,7 @@ body {
 
 .selectArea {
   text-align: center;
+  justify-content: space-between;
 }
 
 .charizard {
