--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@ body {
 	width: 500px;
 	max-width: 100%; 
 	box-sizing: border-box;
-	margin: 20px;
+	margin: 2% 2% 2% 2%;
 	border: 1px solid #aaa;
 	box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
 	border-radius: .3em;
@@ -48,6 +48,7 @@ body {
 .text {
   padding: 2% 2% 1% 2%;
   font-size: 25px;
+  margin-bottom: 0%;
 }
 
 .droplists {
@@ -60,7 +61,7 @@ body {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 	max-width: 100%; 
 	box-sizing: border-box;
-	margin: 20px;
+  margin: 2% 2% 2% 2%;
 	border: none;
 	border-radius: .6em;
 	-webkit-appearance: none;
@@ -86,14 +87,14 @@ background-size: .65em auto, 100%;
 }
 
 .charizard {
-  padding: 5% 5% 5% 1%;
+  padding: 0% 5% 3% 1%;
   display: flex;
   justify-content: flex-end;
   align-self: center;
 }
 
 .boxText2 {
-  padding: 5% 1% 5% 10%;
+  padding: 5% 1% 3% 11%;
   text-align: left;
   display: flex;
   justify-content: flex-start;
@@ -108,13 +109,14 @@ background-size: .65em auto, 100%;
 
 #contentOfCards {
   text-align: center;
+  padding: 2% 5% 2% 5%;
 }
 /* Estilo de cada carta de Pokémon */
 .card-style {
   display: inline-block;
   background-color: #ebebeb;
-  width: 12em;
-  margin: 20px 15px 20px 15px;
+  width: 12.6em;
+  margin: 20px 25px 20px 25px;
   padding: 15px 20px 15px 20px;
   justify-items: center;
   text-align: center;
@@ -169,6 +171,7 @@ background-size: .65em auto, 100%;
 
 .pokemon-description p {
   text-align: left;
+  margin:0;
 }
 
 /* X de cerrar el modal*/
@@ -192,7 +195,7 @@ footer {
   text-align: center;
   list-style: none;
   font-family: 'Raleway', sans-serif;
-  margin-top: 50px;
+  margin-top: 10px;
 }
 .footerText1 {
   font-size: 1em;
@@ -241,7 +244,7 @@ footer {
 }
 
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 980px) {
 
 
   #welcome {
@@ -286,10 +289,15 @@ footer {
     margin: 0%;
     flex-direction: column;
     justify-content: center;
+    padding-top: 0%;
   }
 
   .searchClass {
     width: 250px;
+    margin-top: 20px;
+  }
+
+  .droplists {
     margin-top: 20px;
   }
 
