lineas de color en los costados

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,23 @@
+.line {
+  background: linear-gradient(to bottom, #25CDAA 0%,#A2D694 100%);
+  height:130em;
+  width:1.5%;
+  display:inline-block;
+  position:absolute;
+  top:0;
+  left:0;
+}
+
+.line2 {
+  background: linear-gradient(to bottom, #25CDAA 0%,#A2D694 100%);
+  height:130em;
+  width:1.5%;
+  display:inline-block;
+  position:absolute;
+  top:0;
+  right:0;
+}
+
 #banner {
   background-attachment: scroll,							fixed;
   background-color: #666;
@@ -7,8 +27,6 @@
   background-size: auto,							cover;
   padding: 9% 0% 10% 0%;
   text-align: center;
-  
-  /* solucionar para que quede arriba */
 }
 
 body {
@@ -303,8 +321,4 @@ footer {
   .droplists {
     margin-top: 20px;
   }
-
-  
-
 }
-
